--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Travel</string>
-    <string name="introTitle"><font color='#3f95ec'>Welcome</font>\n to Sri Lanka</string>
+    <string name="introTitle"><font color='#3f95ec'>Anura</font>\n to Sri Lanka</string>
     <string name="subIntro">See what is waiting for you on your next island getaway. Savour the unique experiences this island treasure has to offer</string>
 </resources>
